updated complete notebook

--- a/resources/notebooks/V1L4-Scratch.ipynb
+++ b/resources/notebooks/V1L4-Scratch.ipynb
@@ -13,16 +13,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "cc1e02e6-1cd2-41df-973c-54d8b8b7305d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[atl1-1-01-011-8-2.pace.gatech.edu:mpi_rank_0][MPID_Init] [Performance Suggestion]: Application has requested for multi-thread capability. If allocating memory from different pthreads/OpenMP threads, please consider setting MV2_USE_ALIGNED_ALLOC=1 for improved performance.\n",
+      "Use MV2_USE_THREAD_WARNING=0 to suppress this error message.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checking if mandatory config keys exists :  True\n",
-      "Config loaded with  11  templates\n"
+      "\n",
+      "              -- N E S T --\n",
+      "  Copyright (C) 2004 The NEST Initiative\n",
+      "\n",
+      " Version: 3.8.0\n",
+      " Built: Aug 27 2024 04:32:09\n",
+      "\n",
+      " This program is provided AS IS and comes with\n",
+      " NO WARRANTY. See the file LICENSE for details.\n",
+      "\n",
+      " Problems or suggestions?\n",
+      "   Visit https://www.nest-simulator.org\n",
+      "\n",
+      " Type 'nest.help()' to find out more about NEST.\n",
+      "\n"
      ]
     }
    ],
@@ -36,7 +57,145 @@
     "import airavata_cerebrum.util.desc_config as cbm_dcfg\n",
     "import airavata_cerebrum.model.desc as cbm_desc\n",
     "import airavata_cerebrum.view.tree as cbm_tree\n",
-    "import airavata_cerebrum.model.mousev1 as mousev1\n",
+    "import mousev1.model as v1model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4c8b48a7-eaa2-4c5b-a7ae-65924ea37d47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./v1l4/description/db_connect_output.json\") as dbf:\n",
+    "    db_out_data = json.load(dbf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ca65f3a0-2398-4308-b3f4-184a6d35d30c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys([\"('L4-Pyr', 'L4-Pyr')\", \"('L4-Pyr', 'L4-Pvalb')\", \"('L4-Pyr', 'L4-Sst')\", \"('L4-Pyr', 'L4-Vip')\", \"('L4-Pvalb', 'L4-Pyr')\", \"('L4-Pvalb', 'L4-Pvalb')\", \"('L4-Pvalb', 'L4-Sst')\", \"('L4-Pvalb', 'L4-Vip')\", \"('L4-Sst', 'L4-Pyr')\", \"('L4-Sst', 'L4-Pvalb')\", \"('L4-Sst', 'L4-Sst')\", \"('L4-Sst', 'L4-Vip')\", \"('L4-Vip', 'L4-Pyr')\", \"('L4-Vip', 'L4-Pvalb')\", \"('L4-Vip', 'L4-Sst')\", \"('L4-Vip', 'L4-Vip')\"])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db_out_data['airavata_cerebrum.dataset.ai_synphys'][0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9b30a536-c181-4b6b-8805-d6e082c198a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>L4-Pvalb</th>\n",
+       "      <th>L4-Vip</th>\n",
+       "      <th>L4-Pyr</th>\n",
+       "      <th>L4-Sst</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>L4-Pvalb</th>\n",
+       "      <td>0.610531</td>\n",
+       "      <td>0.101648</td>\n",
+       "      <td>0.356604</td>\n",
+       "      <td>0.065354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>L4-Vip</th>\n",
+       "      <td>0.025412</td>\n",
+       "      <td>0.034990</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.188560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>L4-Pyr</th>\n",
+       "      <td>0.198113</td>\n",
+       "      <td>0.049624</td>\n",
+       "      <td>0.125985</td>\n",
+       "      <td>0.045855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>L4-Sst</th>\n",
+       "      <td>0.392124</td>\n",
+       "      <td>0.306504</td>\n",
+       "      <td>0.287637</td>\n",
+       "      <td>0.016196</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          L4-Pvalb    L4-Vip    L4-Pyr    L4-Sst\n",
+       "L4-Pvalb  0.610531  0.101648  0.356604  0.065354\n",
+       "L4-Vip    0.025412  0.034990  0.000000  0.188560\n",
+       "L4-Pyr    0.198113  0.049624  0.125985  0.045855\n",
+       "L4-Sst    0.392124  0.306504  0.287637  0.016196"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ast\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "#\n",
+    "with open(\"./v1l4/description/db_connect_output.json\") as dbf:\n",
+    "    db_out_data = json.load(dbf)\n",
+    "ai_syn_data = db_out_data['airavata_cerebrum.dataset.ai_synphys'][0]\n",
+    "row_keys = set([ast.literal_eval(xk)[0] for xk in ai_syn_data.keys()])\n",
+    "col_keys = set([ast.literal_eval(xk)[1] for xk in ai_syn_data.keys()])\n",
+    "col_names = row_names = list(row_keys)\n",
+    "connect_matrix = np.zeros((len(row_names), len(col_names)))\n",
+    "for i, cx in enumerate(col_names):\n",
+    "    for j,rx in enumerate(row_names):\n",
+    "        connect_matrix[i, j] = ai_syn_data[repr((cx, rx))]\n",
+    "pd.DataFrame(connect_matrix, index=row_names, columns=col_names)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fec6df9f-1583-4071-9322-c8cb9b19d428",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#\n",
     "#\n",
     "md_config = cbm_dcfg.ModelDescConfig(\n",
